--- a/PetAdoption/Base.lproj/Main.storyboard
+++ b/PetAdoption/Base.lproj/Main.storyboard
@@ -110,35 +110,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l6B-Xm-9T0" customClass="PFImageView">
-                                <rect key="frame" x="197" y="72" width="207" height="207"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LZt-Tx-qw7">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="207" id="hUs-hv-OuK"/>
-                                    <constraint firstAttribute="width" constant="207" id="pUo-tZ-235"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pet Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ky9-a3-Nd0">
-                                <rect key="frame" x="263" y="287" width="75" height="21"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="Fgc-yB-rxQ">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="223"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <animations/>
+                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellIdentifier" textLabel="Zc6-Hh-HzM" detailTextLabel="hA9-1l-gqB" style="IBUITableViewCellStyleValue1" id="Yl2-eS-pi3">
+                                        <rect key="frame" x="0.0" y="251" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Yl2-eS-pi3" id="WZy-0U-pY0">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Zc6-Hh-HzM">
+                                                    <rect key="frame" x="15" y="12" width="31.5" height="19.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hA9-1l-gqB">
+                                                    <rect key="frame" x="543.5" y="12" width="41.5" height="19.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="b4t-aL-uaX" id="co2-Xi-xhC"/>
+                                    <outlet property="delegate" destination="b4t-aL-uaX" id="tAU-Wf-Svh"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ky9-a3-Nd0" firstAttribute="top" secondItem="l6B-Xm-9T0" secondAttribute="bottom" constant="8" id="8u8-0x-rtK"/>
-                            <constraint firstItem="ky9-a3-Nd0" firstAttribute="centerX" secondItem="l6B-Xm-9T0" secondAttribute="centerX" id="Ocb-Wt-tC5"/>
-                            <constraint firstItem="l6B-Xm-9T0" firstAttribute="centerX" secondItem="cDZ-CD-4LX" secondAttribute="centerX" id="WIa-jD-Mzz"/>
-                            <constraint firstItem="l6B-Xm-9T0" firstAttribute="top" secondItem="ERs-mp-lBd" secondAttribute="bottom" constant="8" id="xph-kU-bPe"/>
+                            <constraint firstItem="LZt-Tx-qw7" firstAttribute="top" secondItem="cDZ-CD-4LX" secondAttribute="top" id="EIu-zD-hJy"/>
+                            <constraint firstAttribute="trailing" secondItem="LZt-Tx-qw7" secondAttribute="trailing" id="LUm-jP-Uhf"/>
+                            <constraint firstItem="A2G-tj-JMm" firstAttribute="top" secondItem="LZt-Tx-qw7" secondAttribute="bottom" id="RpN-f9-Zrh"/>
+                            <constraint firstItem="LZt-Tx-qw7" firstAttribute="leading" secondItem="cDZ-CD-4LX" secondAttribute="leading" id="fkn-it-kfR"/>
                         </constraints>
                     </view>
+                    <nil key="simulatedTopBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mrm-B3-lO0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="776" y="226"/>
+            <point key="canvasLocation" x="806" y="226"/>
         </scene>
     </scenes>
 </document>
