--- a/PetAdoption/Base.lproj/Main.storyboard
+++ b/PetAdoption/Base.lproj/Main.storyboard
@@ -99,10 +99,34 @@
                         <viewControllerLayoutGuide type="bottom" id="A2G-tj-JMm"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="cDZ-CD-4LX">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ATR-sZ-zJy">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="eMK-XK-2Y7">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="167"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ep5-Nh-Gcc">
+                                            <rect key="frame" x="277" y="69" width="46" height="30"/>
+                                            <state key="normal" title="Button"/>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstItem="ep5-Nh-Gcc" firstAttribute="centerX" secondItem="eMK-XK-2Y7" secondAttribute="centerX" id="IIK-V3-6hd"/>
+                                        <constraint firstItem="ep5-Nh-Gcc" firstAttribute="centerY" secondItem="eMK-XK-2Y7" secondAttribute="centerY" id="aZo-N9-6oo"/>
+                                    </constraints>
+                                </view>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="600" height="1000"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mrm-B3-lO0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
