--- a/PetAdoption-iOS/PetAdoption-iOS/PetListings.storyboard
+++ b/PetAdoption-iOS/PetAdoption-iOS/PetListings.storyboard
@@ -46,14 +46,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="142" height="135"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8CY-ZL-Gwe">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="8CY-ZL-Gwe">
                                                     <rect key="frame" x="0.0" y="0.0" width="142" height="135"/>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0TA-i8-d8U">
                                                     <rect key="frame" x="0.0" y="88" width="142" height="47"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYm-3m-8NY">
-                                                            <rect key="frame" x="43" y="9" width="56" height="30"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="rYm-3m-8NY">
+                                                            <rect key="frame" x="8" y="9" width="126" height="30"/>
                                                             <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="22"/>
                                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -63,12 +63,14 @@
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="47" id="OsB-CX-N1i"/>
                                                         <constraint firstItem="rYm-3m-8NY" firstAttribute="centerX" secondItem="0TA-i8-d8U" secondAttribute="centerX" id="Ptt-7W-277"/>
-                                                        <constraint firstItem="rYm-3m-8NY" firstAttribute="centerY" secondItem="0TA-i8-d8U" secondAttribute="centerY" id="YWp-6Z-Xah"/>
+                                                        <constraint firstItem="rYm-3m-8NY" firstAttribute="centerY" secondItem="0TA-i8-d8U" secondAttribute="centerY" id="YTg-gt-fFQ"/>
+                                                        <constraint firstAttribute="trailing" secondItem="rYm-3m-8NY" secondAttribute="trailing" constant="8" id="qfr-yi-VgU"/>
+                                                        <constraint firstItem="rYm-3m-8NY" firstAttribute="leading" secondItem="0TA-i8-d8U" secondAttribute="leading" constant="8" id="vSb-W9-dPd"/>
                                                     </constraints>
                                                 </view>
-                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="VMb-m4-1fg">
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="VMb-m4-1fg">
                                                     <rect key="frame" x="61" y="58" width="20" height="20"/>
-                                                    <color key="color" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="color" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                 </activityIndicatorView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -136,7 +138,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XZL-54-kEO" userLabel="Image View Placeholder">
                                                 <rect key="frame" x="0.0" y="0.0" width="400" height="228"/>
                                                 <subviews>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="Txg-1H-Qww">
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="Txg-1H-Qww">
                                                         <rect key="frame" x="0.0" y="0.0" width="400" height="228"/>
                                                     </imageView>
                                                 </subviews>
@@ -350,6 +352,6 @@ Suspendisse luctus libero in scelerisque bibendum. Fusce suscipit mattis arcu ut
     <resources>
         <image name="Home" width="25" height="25"/>
         <image name="Home Filled" width="25" height="25"/>
-        <image name="Image Placeholder" width="200" height="200"/>
+        <image name="placeholder" width="200" height="200"/>
     </resources>
 </document>
