--- a/PetAdoption-iOS/PetAdoption-iOS/Base.lproj/Main.storyboard
+++ b/PetAdoption-iOS/PetAdoption-iOS/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9M6-g6-hfq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9M6-g6-hfq">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--Tab Bar Controller-->
@@ -15,7 +15,6 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="3T6-j1-HO0" kind="relationship" relationship="viewControllers" id="RCi-wn-ZsS"/>
                         <segue destination="lLO-Cv-9K2" kind="relationship" relationship="viewControllers" id="jXl-3r-fmK"/>
                         <segue destination="wpj-E6-3A6" kind="relationship" relationship="viewControllers" id="uxm-gY-ahV"/>
                         <segue destination="tnp-0k-wAa" kind="relationship" relationship="viewControllers" id="R0b-Kg-W0s"/>
@@ -24,16 +23,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yed-ye-xeA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-453" y="-134"/>
-        </scene>
-        <!--PetListings-->
-        <scene sceneID="HLZ-4x-wt1">
-            <objects>
-                <viewControllerPlaceholder storyboardName="PetListings" id="3T6-j1-HO0" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Home" image="Home" selectedImage="Home Filled" id="Mes-tW-Ryy"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5Mu-Rd-qQM" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-675.5" y="320"/>
         </scene>
         <!--Info-->
         <scene sceneID="yec-fD-otx">
@@ -69,8 +58,6 @@
     <resources>
         <image name="About" width="25" height="25"/>
         <image name="About Filled" width="25" height="25"/>
-        <image name="Home" width="25" height="25"/>
-        <image name="Home Filled" width="25" height="25"/>
         <image name="Lost Pet" width="25" height="25"/>
         <image name="Lost Pet Filled" width="25" height="25"/>
         <image name="Search" width="25" height="25"/>
